bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: module6-sentiment-analysis
    labels:
        com.docker.compose.project: module6-sentiment-analysis
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: module6-sentiment-analysis
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: module6-sentiment-analysis
                com.docker.compose.service: backend
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: backend
                  image: module6-sentiment-analysis-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-8080
                      containerPort: 8080
