bridge/base/backend-expose.yaml
#! backend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: module6-sentiment-analysis
    labels:
        com.docker.compose.project: module6-sentiment-analysis
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: module6-sentiment-analysis
        com.docker.compose.service: backend
    ports:
        - name: backend-8080
          port: 8080
          targetPort: backend-8080
