bridge/base/backend-service.yaml
# check if there is at least one published port

#! backend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend-published
    namespace: module6-sentiment-analysis
    labels:
        com.docker.compose.project: module6-sentiment-analysis
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: module6-sentiment-analysis
        com.docker.compose.service: backend
    ports:
        - name: backend-8080
          port: 8080
          protocol: TCP
          targetPort: backend-8080
